bpo-46431: improve error message on invalid calls to BaseExceptionGroup.__new__ (GH-30854)